# tipos

./: .gitignore  README.rst  pyproject.toml
tests/: test_tipos.py  test_transformador_pytest.py  test_transformador_unittest.py
tipos/: __init__.py  __main__.py  transformador.py
