[tool.poetry]
name = "tipos"
version = "0.2.0"
description = ""
authors = ["Arthur Zopellaro <arthurazsoares@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.942"

[tool.poetry.scripts]
tipos = 'tipos:run'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
